--- a/templates/Article/Article.module.css
+++ b/templates/Article/Article.module.css
@@ -11,10 +11,22 @@
   grid-template-rows: 150px auto 150px;
 }
 
+@media (min-width: 1024px) {
+  .coverSlot {
+    grid-column: m1-end / m2-start;
+  }
+}
+
 .article {
   grid-row: 2;
   align-self: center;
   margin: 0 2rem;
+}
+
+@media (min-width: 1024px) {
+  .article {
+    margin: 0;
+  }
 }
 
 .supHeadingText {
@@ -48,6 +60,12 @@
   margin-left: 2rem;
 }
 
+@media (min-width: 1024px) {
+  .subFooterHeadingText {
+    margin-left: 0;
+  }
+}
+
 .heading {
   grid-column: m1-end / m2-start;
   margin: var(--spacing-1) 0 1rem;
@@ -62,6 +80,7 @@
 @media (min-width: 1024px) {
   .heading {
     grid-column: c1/ c5;
+    margin-bottom: 0;
   }
 }
 
@@ -115,6 +134,14 @@
 @media (min-width: 768px) {
   .quote > .text {
     padding: var(--spacing-1);
+  }
+}
+
+@media (min-width: 1024px) {
+  .quote > .text {
+    padding: var(--spacing-2) 16rem;
+    font-size: var(--font-size-body-large);
+    line-height: var(--line-height-body-large);
   }
 }
 
