--- a/templates/Home/Home.module.css
+++ b/templates/Home/Home.module.css
@@ -1,5 +1,5 @@
 .coverSlotContent {
-  height: calc(100vh - var(--header-height));
+  height: 100vh;
   background-color: var(--background-color-1);
 }
 
